--- a/Ingenio.PortalWebExterno/Views/Account/Login.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Account/Login.cshtml
@@ -6,13 +6,14 @@
         urlReturn = ViewBag.urlReturn;
     }
 
+    ViewBag.titulo = "Ingreso";
 }
 <style>
     #content {
-        background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../img/Img_Web2/fondo_login.jpg);
+        background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../img/Img_Web2/Fondo_login2.png);
         /*background-repeat: no-repeat;*/
         background-size: cover;
-        padding:40px;
+        padding:100px 40px;
     }
 
     .form-control {
@@ -66,7 +67,7 @@
 
 
 <div id="content" style="">
-    <div class="container">
+    <div class="container login_contantenedor">
         <div class="row" style="padding-bottom: 40px;">
             <div class="col-md-6">
                 <div class="box" style="background: rgba(227, 227, 227, 0.62); padding-left: 20px; padding-right: 20px;">
