--- a/Ingenio.PortalWebExterno/Content/sass/pages/_multiportal.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_multiportal.scss
@@ -38,9 +38,15 @@
             max-width: 900px;
             margin: auto;
             gap: 20px;
+            padding: 20px;
+            transition: all 0.2s;
 
-            h2{
-                margin-top:30px;
+            &:hover {
+                transform: translateY(-2px);
+            }
+
+            h2 {
+                margin-top: 30px;
             }
 
             @media screen and (min-width: 700px) {
