--- a/Ingenio.PortalWebExterno/Content/sass/pages/_multiportal.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_multiportal.scss
@@ -39,10 +39,18 @@
             margin: auto;
             gap: 20px;
             padding: 20px;
-            transition: all 0.2s;
 
-            &:hover {
-                transform: translateY(-2px);
+            a {
+                img {
+                    transition: all 0.2s;
+                }
+
+                &:hover {
+                    img {
+                        transform: translateY(-2px);
+                        box-shadow: 0px 15px 30px -20px $sombras-color, 0px 15px 30px -20px $sombras-color, 0px 15px 30px -20px $sombras-color;
+                    }
+                }
             }
 
             h2 {
